# MatitONE-Software

./: .gitignore  README.md  main.py  pyproject.toml
TestCalibration/: calibration_MatriceSave.py  control.py
core/: bleconnect.py  calibration.py  calibration_MatriceSave.py  camera.py  control copy.py  control.py  pen.py  pen_logic.py  softwareDetector.py  testCalibrationHmgVideo.py  tracking.py
gui/: gui.py
tests/: test.py
