[project]
name = "matitone-software"
version = "0.1.0"
description = "Projet Multi HEIG-VD"
authors = [
    {name = "Noé Almonte",email = "noe.almonte@outlook.com"}
]
readme = "README.md"
requires-python =  ">=3.12,<3.14"
dependencies = [
    "customtkinter (>=5.2.2,<6.0.0)",
    "opencv-contrib-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "serial (>=0.0.97,<0.0.98)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "bleak (>=0.22.3,<0.23.0)",
    "pywin32 (>=310,<311)",
    "pynput (>=1.8.1,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"